--- a/angular-recipe-app/src/app/shared/components/header/header.component.html
+++ b/angular-recipe-app/src/app/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
       <!-- Navigation link: Home -->
       <li class="nav-item">
         <a
-          [routerLink]="['/home']"
+          [routerLink]="['/']"
           routerLinkActive="['active']"
           class="nav-link link-dark px-2"
           aria-current="page"
